@@ -25,42 +25,54 @@ package com.janilla.conduit.backend;
 
 import java.security.GeneralSecurityException;
 import java.security.SecureRandom;
-import java.util.Collections;
 import java.util.HexFormat;
 import java.util.Map;
 import java.util.Random;
+import java.util.function.Predicate;
 
 import javax.crypto.SecretKeyFactory;
 import javax.crypto.spec.PBEKeySpec;
 
+import com.janilla.backend.cms.UserHttpExchange;
 import com.janilla.backend.persistence.Persistence;
 import com.janilla.backend.web.BackendConfig;
+import com.janilla.blanktemplate.BlankDomain;
+import com.janilla.blanktemplate.backend.BlankUserApi;
+import com.janilla.cms.User;
+import com.janilla.http.HttpExchange;
 import com.janilla.ioc.DiFactory;
-import com.janilla.java.JavaReflect;
+import com.janilla.java.Converter;
+import com.janilla.java.Copier;
+import com.janilla.java.Direction;
+import com.janilla.java.Java;
 import com.janilla.json.Jwt;
 import com.janilla.web.Handle;
 
-@Handle(path = "/api/users")
-public class UserApi {
+class UserApi extends BlankUserApi {
 
-	protected final BackendConfig config;
+	protected static final Random RANDOM = new SecureRandom();
+
+	protected final Converter converter;
 
 	protected final DiFactory diFactory;
 
-	protected final Persistence persistence;
-
-	public UserApi(BackendConfig config, Persistence persistence, DiFactory diFactory) {
-		this.config = config;
-		this.persistence = persistence;
+	UserApi(Predicate<HttpExchange> drafts, Persistence persistence, Copier copier, Direction defaultDirection,
+			Integer defaultDepth, BackendConfig config, BlankDomain domain, Converter converter, DiFactory diFactory) {
+		super(drafts, persistence, copier, defaultDirection, defaultDepth, config, domain);
+		this.converter = converter;
 		this.diFactory = diFactory;
 	}
 
 	@Handle(method = "GET", path = "/api/user")
-	public Object getCurrent(User user) {
-		var p = user != null ? Map.of("loggedInAs", user.email()) : null;
-		var t = p != null ? Jwt.generateToken(Map.of("alg", "HS256", "typ", "JWT"), p, config.jwt().key()) : null;
-		return Collections.singletonMap("user",
-				user != null ? new CurrentUser(user.email(), t, user.username(), user.bio(), user.image()) : null);
+	public Object getCurrent(User<?> user) {
+		if (user == null)
+			return null;
+
+		var p = Map.of("loggedInAs", user.email());
+		var t = Jwt.generateToken(Map.of("alg", "HS256", "typ", "JWT"), p, config.jwt().key());
+		var u = converter.convert(Map.of("token", t), CurrentUser.class);
+		u = copier.copy(user, u);
+		return Java.hashMap("user", u);
 	}
 
 	@Handle(method = "POST", path = "login")
@@ -70,8 +82,7 @@ public class UserApi {
 		v.isNotBlank("password", authenticate.user.password);
 		v.orThrow();
 
-		var c = persistence.crud(User.class);
-		var u = c.read(c.find("email", new Object[] { authenticate.user.email }));
+		var u = crud().read(crud().find("email", new Object[] { authenticate.user.email }));
 		{
 			var f = HexFormat.of();
 			var p = authenticate.user.password.toCharArray();
@@ -80,6 +91,7 @@ public class UserApi {
 			v.isValid("email or password", u != null && h.equals(u.hash()));
 			v.orThrow();
 		}
+
 		return getCurrent(u);
 	}
 
@@ -88,12 +100,12 @@ public class UserApi {
 		var u = register.user;
 		var v = diFactory.newInstance(diFactory.classFor(Validation.class));
 		if (v.isNotBlank("username", u.username) && v.isSafe("username", u.username)) {
-			var c = persistence.crud(User.class);
+			var c = ((PersistenceImpl) persistence).userCrud();
 			var x = c.read(c.find("username", new Object[] { u.username }));
 			v.hasNotBeenTaken("username", x);
 		}
 		if (v.isNotBlank("email", u.email) && v.isSafe("email", u.email)) {
-			var c = persistence.crud(User.class);
+			var c = ((PersistenceImpl) persistence).userCrud();
 			var x = c.read(c.find("email", new Object[] { u.email }));
 			v.hasNotBeenTaken("email", x);
 		}
@@ -101,36 +113,37 @@ public class UserApi {
 			v.isSafe("password", u.password);
 		v.orThrow();
 
-		if (config.liveDemo() != null && config.liveDemo()) {
-			var c = persistence.crud(User.class).count();
+		if (config.liveDemo()) {
+			var c = ((PersistenceImpl) persistence).userCrud().count();
 			if (c >= 1000)
 				throw new ValidationException("existing users", "are too many (" + c + ")");
 		}
 
-		var x = new User(null, null, null, null, null, null, null);
-		x = JavaReflect.copy(u, x);
+		@SuppressWarnings("unchecked")
+		var x = (User<Long>) converter.convert(u, diFactory.classFor(User.class));
 		x = setHashAndSalt(x, u.password);
-		if (x.image() == null || x.image().isBlank())
-			x = new User(x.id(), x.email(), x.hash(), x.salt(), x.username(), x.bio(),
-					"data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='16' height='16'><text x='2' y='12.5' font-size='12'>"
-							+ new String(Character.toChars(0x1F600)) + "</text></svg>");
-		x = persistence.crud(User.class).create(x);
+//		if (x.image() == null || x.image().isBlank())
+		x = copier.copy(Map.of("image",
+				"data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='16' height='16'><text x='2' y='12.5' font-size='12'>"
+						+ new String(Character.toChars(0x1F600)) + "</text></svg>"),
+				x);
+		x = ((PersistenceImpl) persistence).userCrud().create(x);
 		return getCurrent(x);
 	}
 
 	@Handle(method = "PUT", path = "/api/user")
-	public Object update(Update update, User user) {
+	public Object update(Update update, UserHttpExchange<User<Long>> exchange) {
 //		IO.println("update=" + update);
 		var u = update.user;
 		var v = diFactory.newInstance(diFactory.classFor(Validation.class));
-		var c = persistence.crud(User.class);
-//		if (v.isNotBlank("username", u.username) && v.isSafe("username", u.username)
+		var c = ((PersistenceImpl) persistence).userCrud();
 		if (u.username != null && !u.username.isBlank() && v.isSafe("username", u.username)
-				&& !u.username.equals(user.username())) {
+				&& !u.username.equals(exchange.sessionUser().name())) {
 			var x = c.read(c.find("username", new Object[] { u.username }));
 			v.hasNotBeenTaken("username", x);
 		}
-		if (v.isNotBlank("email", u.email) && v.isSafe("email", u.email) && !u.email.equals(user.email())) {
+		if (v.isNotBlank("email", u.email) && v.isSafe("email", u.email)
+				&& !u.email.equals(exchange.sessionUser().email())) {
 			var x = c.read(c.find("email", new Object[] { u.email }));
 			v.hasNotBeenTaken("email", x);
 		}
@@ -139,8 +152,8 @@ public class UserApi {
 		v.isSafe("password", u.password);
 		v.orThrow();
 
-		var x = c.update(user.id(), y -> {
-			y = JavaReflect.copy(u, y);
+		var x = c.update(exchange.sessionUser().id(), y -> {
+			y = copier.copy(u, y);
 			if (u.password != null && !u.password.isBlank())
 				y = setHashAndSalt(y, u.password);
 			return y;
@@ -148,18 +161,7 @@ public class UserApi {
 		return getCurrent(x);
 	}
 
-	protected static final Random RANDOM = new SecureRandom();
-
-	static User setHashAndSalt(User user, String password) {
-		var s = new byte[16];
-		RANDOM.nextBytes(s);
-		var h = hash(password.toCharArray(), s);
-		var f = HexFormat.of();
-		return new User(user.id(), user.email(), f.formatHex(h), f.formatHex(s), user.username(), user.bio(),
-				user.image());
-	}
-
-	static byte[] hash(char[] password, byte[] salt) {
+	protected byte[] hash(char[] password, byte[] salt) {
 		var s = new PBEKeySpec(password, salt, 10000, 512);
 		try {
 			var f = SecretKeyFactory.getInstance("PBKDF2WithHmacSHA512");
@@ -169,13 +171,21 @@ public class UserApi {
 		}
 	}
 
-	public record CurrentUser(String email, String token, String username, String bio, String image) {
+	protected <ID extends Comparable<ID>> User<ID> setHashAndSalt(User<ID> user, String password) {
+		var s = new byte[16];
+		RANDOM.nextBytes(s);
+		var h = hash(password.toCharArray(), s);
+		var f = HexFormat.of();
+		return copier.copy(Map.of("hash", f.formatHex(h), "salt", f.formatHex(s)), user);
 	}
 
 	public record Authenticate(User user) {
 
 		public record User(String email, String password) {
 		}
+	}
+
+	public record CurrentUser(String email, String token, String username, String bio, String image) {
 	}
 
 	public record Register(User user) {
